manifests/echoheaders/echoheaders-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mydeployment
  namespace: applications
  labels:
    app: mydeployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: mydeployment
    spec:
      containers:
      - name: mydeployment
        image: brndnmtthws/nginx-echo-headers:latest
        ports:
        - name: my-http
          containerPort: 8080
          # hostPort will be a high level port
