manifests/echoheaders/echoheaders-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mydeployment
  namespace: applications
  labels:
    app: mydeployment
    linkerd-expose-external: "on"
    # linkerd-expose-internal: "on"
spec:
  type: NodePort
  ports:
  - name: first-thing
    targetPort: my-http
    port: 7777
  selector:
    app: mydeployment
