manifests/echoheaders/echoheaders-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mydeployment
  namespace: applications
  labels:
    app: mydeployment
    linkerd-expose-external: "on"
  annotations:
    kubernetes.io/ingress.class: "linkerd"
spec:
  rules:
  - host: "echoheaders"
    http:
      paths:
      - backend:
          serviceName: mydeployment
          servicePort: first-thing
  - host: "echoheaders.external"
    http:
      paths:
      - backend:
          serviceName: mydeployment
          servicePort: first-thing
